--- a/index.html
+++ b/index.html
@@ -1824,9 +1824,8 @@
         function updatePlaceholderText() {
             const placeholder = document.querySelector('.placeholder-text');
             if (appState.currentGoal) {
-                placeholder.innerHTML = `Пишите ваш проект точно как создали.<br>
-                Проговаривайте вслух с эмоциями, представляя детали.<br>
-                Эмоции и образы ускоряют формирование связи.<br>
+                placeholder.innerHTML = `Пишите ваш проект точно как создали.
+                Проговаривайте вслух с эмоциями, представляя детали. Эмоции и образы ускоряют формирование связи.<br>
                 Чем ярче образ, тем быстрее формируется нейронная связь.<br>
                 Пишите в настоящем времени, как будто это уже происходит.`;
             }
@@ -2762,3 +2761,4 @@
     </script>
 </body>
 </html>
+
